cambio de nombre marcas

--- a/store/blocks/menu/menu-marcas.jsonc
+++ b/store/blocks/menu/menu-marcas.jsonc
@@ -116,7 +116,7 @@
         "props": {
             "textAlignment": "CENTER",
             "textPosition": "CENTER",
-            "text": "Bianchi",
+            "text": "Bikeprotekt",
             "blockClass": "texto-submenu-imagen",
             "link": {
                 "url": "#"
