se baja la prueba de marcas

--- a/store/blocks/menu/menu-marcas.jsonc
+++ b/store/blocks/menu/menu-marcas.jsonc
@@ -9,7 +9,7 @@
           "blockClass": "categoria-header"
         },
         "blocks": [
-            "vtex.menu@2.x:submenu#marcas"
+            //"vtex.menu@2.x:submenu#marcas"
         ]
     },
     "vtex.menu@2.x:submenu#marcas": {
