Se oculta logo know online y se oculta blocks de instagram

--- a/store/blocks/footer.jsonc
+++ b/store/blocks/footer.jsonc
@@ -327,8 +327,8 @@
   },
   "flex-layout.row#footer-logos-empresa": {
     "children": [
-      "image#vtex",
-      "image#ko-logo"
+      "image#vtex"
+      //"image#ko-logo"
     ],
     "props": {
       "blockClass": "footer-empresa",
