--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -19,9 +19,9 @@
       "rich-text#titulo-noticias",
       "rich-text#fondo-color",
       "flex-layout.row#noticias",
-      "rich-text#titulo-instagram",
-      "rich-text#fondo-color",
-      "iframe#instagram",
+      //"rich-text#titulo-instagram",
+      //"rich-text#fondo-color",
+      //"iframe#instagram",
       "flex-layout.row#links-home"
     ]
   },
