--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
     "vtex.store-footer": "2.x",
     "vtex.store-components": "3.x",
     "vtex.store-icons": "0.x",
+    "vtex.store-image": "0.x",
     "vtex.styleguide": "9.x",
     "vtex.slider": "0.x",
     "vtex.category-menu": "2.x",
