--- a/manifest.json
+++ b/manifest.json
@@ -60,6 +60,8 @@
     "vtex.sandbox": "0.x",
     "vtex.seller-selector": "0.x"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "vtex.availability-notify": "1.x"
+  },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
