--- a/manifest.json
+++ b/manifest.json
@@ -59,6 +59,7 @@
     "vtex.product-specifications": "1.x",
     "vtex.sandbox": "0.x",
     "vtex.seller-selector": "0.x",
+    "vtex.overlay-layout": "0.x",
     "montenbaikcl.formu": "0.x"
   },
   "peerDependencies": {
